Hide getRolloutWithStatusDetails from API
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>